# ShellyControl

./: .gitignore  README.md  compose.yaml  configuration.env.example  local_compose.yaml  my_shellies_and_lamps.yaml.example
RASPI/: RASPI_NOTES.md
RASPI/sensor-scripts/: motion_detection.py
RASPI/starting-scripts/: start-chromium-kiosk.sh  start-servers.sh
react-frontend/: Dockerfile  link2youtube.txt  package-lock.json  package.json
react-frontend/src/: App.css  App.js  index.css  theme.js
react-frontend/src/components/configuration/: ConfigContainer.css  ConfigContainer.js  ConfigEditLamp.js  ConfigEditShelly.js  EditShellyLamp.css
react-frontend/src/components/footerButtons/: EditButton.css  EditButton.js  FooterButtonsContainer.css  FooterButtonsContainer.js  ForceReload.css  ForceReload.js  GlobalSwitch.js
react-frontend/src/components/header/: Header.css  Header.js
react-frontend/src/components/lamps/: Lamp.css  Lamp.js  LampContainer.css  LampContainer.js  Slider.css  Slider.js
react-frontend/src/components/tools/: Loading.css  Loading.js
react-frontend/src/helpers/: isValidIPAddr.js
rust-backend/: Cargo.toml  Cross.toml  Dockerfile  README.md  TODO.md  shelly_config.yaml  test_write_shelly_config.yaml
rust-backend/src/: lib.rs  main.rs
rust-backend/src/config/: mod.rs
rust-backend/src/devices/: frontend_structs.rs  lamps.rs  mod.rs  shellies.rs
rust-backend/src/information/: weather.rs
rust-backend/src/routes/: config_routes.rs  lamp_routes.rs  mod.rs  weather_routes.rs
rust-backend/tests/: health_check.rs
(+6 files in other folders)
